Begin implementing Bootstrap stopgap
It'll be demo good for this weekend while we wait on the pending
stylesheets

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -1,36 +1,3 @@
-@import "compass/support"
-@import "compass/css3/box-sizing"
-@import "compass/typography/vertical_rhythm"
-@import "compass/css3/box-shadow"
-@import "compass/css3/transition"
-/*
- * Font Imports
- */
+body
+  margin-top: 40px
 
-@import url('http://fonts.googleapis.com/css?family=Lato:400,700')
-@import url('http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700')
-@import font-awesome
-
-@import "variables"
-
-@import "generic/normalize"
-@import "generic/clearfix"
-@import "generic/animate"
-@import "generic/grid"
-
-@import "base/main"
-@import "base/headings"
-@import "base/tables"
-@import "base/links"
-@import "base/forms"
-
-@import "layout/wrapper"
-@import "layout/sidebar"
-@import "layout/main"
-@import "layout/devise"
-@import "layout/nav"
-
-@import "objects/gear"
-@import "objects/badge"
-@import "objects/order"
-@import "objects/flash"
